--- a/src/css/base/_resets.scss
+++ b/src/css/base/_resets.scss
@@ -22,8 +22,9 @@ table {
 
 body {
     margin: 0;
-     background-color: rgb(10, 25, 47);
-   /*  background: linear-gradient(#122040, #2E406B); */
+    
+   /*   background-color: #0a192f; */
+     background: linear-gradient(to left top, rgba(14, 16, 27, 0.99) 10%, rgba(21, 23, 39, 0.99) 50%, rgba(14, 16, 27, 0.99));
 }
 
 h1, h2, h3, h4, h5, h6, p {
