--- a/src/css/header/_header.scss
+++ b/src/css/header/_header.scss
@@ -4,8 +4,8 @@ header {
     position: absolute;
     top: 0;
     z-index: 10;
-    font-family: 'Roboto';
-    font-weight: 400;
+    font-family: 'Source Sans Pro';
+    font-weight: lighter;
 
     .inner-header {
         display:  flex;
@@ -23,21 +23,46 @@ header {
             }
         }
 
-        .navigation {
-            nav {
-                span {
-                    color: rgb(100, 255, 218);
-                    margin-right: 5px;
+        
+
+        .navbar {
+            top: 0;
+            right: 0;
+            z-index: 4;
+            transform: translate3d(0, -400px, 0);
+            border-left: 1px solid transparent;           
+            transition: transform 700ms 
+                        cubic-bezier(0.77, 0, 0.175, 1),background-color 700ms ease,opacity 500ms ease;
+
+            .nav-list {               
+
+                ul {
+                    display: flex;
+                    /* width: 100%; */
+                    list-style: none;
+                    margin-top: 30px;
+
+                    span {
+                        color: #63CDD7;
+                        margin-right: 15px;  
+                        margin-top: 15px;              
+                    }                    
+
+                    li {
+                        color: rgb(177, 187, 216);
+                        width: 100%;
+                        margin-right: 50px;
+                        font-size: 16px;   
+                                             
+                    }
+
+                    a {
+                        text-decoration: none;
+                    }
                 }
-                a{
-                    /* color: $off-white; */
-                    color: rgb(177, 187, 216);
-                    margin: 0 10px;
-                    text-decoration: none;
-                    letter-spacing: 1.5px;
-                }
+
+               
             }
         }
-       
     }
 }
