--- a/src/css/pages/_mtm.scss
+++ b/src/css/pages/_mtm.scss
@@ -1,8 +1,6 @@
 main {
     margin: 0 auto;
     height: 100%;
- /*    margin-left: 50px;
-    margin-right: 50px; */
 
     .project-intro-container {
         height: auto;
@@ -30,8 +28,6 @@ main {
                
             }    
         }
-
-
 
         cite, p {
             padding: 0;
@@ -86,15 +82,19 @@ main {
         margin-top: 80px;
         padding-top: 50px;
         padding-bottom: 50px;
-        background-color: #03162a;     
+        background-color: #0e101bfc;   
  
 
 
         .proj-scope {
             margin: 0 auto;
-            width: 968px; 
-           /*  background-color: #03162a;     */
+            width: 80%; 
+
+           @media (min-width: 775px) {
+                width: 700px; 
+           }
         }
+
         h2 {
             text-transform: uppercase;
             letter-spacing: 3px;
@@ -103,8 +103,7 @@ main {
 
         p {
             margin-bottom: 80px;
-        }
-        
+        }        
 
         .techstack {
             ul {
@@ -116,16 +115,6 @@ main {
             }
             li {
                 &::before {
-                   /*  content: "";
-                    position: absolute;
-                    margin-left: -15px;
-                    margin-top: 10px;
-                    height: 5px;
-                    width: 5px;
-                    border: 10px solid rgb(39, 148, 133);
-                    border-width: 2px 2px 0 0;
-                    transform: rotate(45deg); 
-                    »*/
                     content: "»";
                     position: absolute;
                     margin-left: -15px;
@@ -135,8 +124,6 @@ main {
                     font-size: 22px;
                     line-height: 25px;
                     color: rgb(39, 148, 133);
-/*                     border: 10px solid rgb(39, 148, 133);
-                    border-width: 2px 2px 0 0; */
                 }
             }
         }
@@ -145,12 +132,17 @@ main {
     .dev-process {
         margin: 0 auto;
         margin-bottom: 100px;
+        width: 80%; 
+
+        @media (min-width: 775px) {
+            width: 700px; 
+       }
  
         h2 {
             letter-spacing: 3px;
             text-transform: uppercase;
             font-weight: 400;
-            color: #e3e3e3;
+            color: #e3e3e3;            
         }
 
         p {
@@ -166,17 +158,62 @@ main {
         }
 
         .code-wrapper {
-    /*       display: flex;
-            align-items: center;
-            flex: column nowrap; */
             margin: 16px 15px;
             max-width: 1000px;
+      
         }
+    }
+
+    .prev-next-container {
+        margin: 0 auto;
+        padding: 50px;
+        text-align: center;        
+
+        .prev-next-subtitle {
+            letter-spacing: 7px;
+            color: rgb(165, 165, 165);
+            margin: 20px;            
+        }
+
+        .link-title {
+            color: white;   
+            padding: 0;
+            margin: 0 auto;
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+            text-decoration: none;
+            position: relative;
+            display:block;
+            width: 250px;
+
+            
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: 50%;
+                left: 0px;
+                width: 100%;
+                height: 1px;
+                background: #6098FF;
+                display: block;
+                transform-origin: left top;
+                transform: scale(0, 1);
+                transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
+            }
+
+            &:hover::before{
+                transform-origin: right top;
+                transform: scale(1, 1);
+            }
+                        
+        }
+
     }
 }
 
 
-@media(min-width: 740px) {
+/* @media(min-width: 740px) {
 
     .project-intro-container {   
        
@@ -215,4 +252,4 @@ main {
 
         }
     }
-}
+} */
