--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -19,8 +19,7 @@
             position: relative;
             
 
-            .about-content {
-        
+            .about-content {        
                 .about-title {
                     color: $off-white;
                     font-weight: 600;
@@ -44,11 +43,7 @@
                     top: -10px;     
                     right: -140px; 
                     overflow: hidden;
-        
                 }
-
-                
-
                 
                 ul {
                     width: 300px;
@@ -74,72 +69,72 @@
                     }
                 }
 
+
                 .contact {
                     display: block;
                     margin: 0 auto;
                     margin-top: 75px;
                     text-decoration: none;
                     color: rgb(100, 255, 218);
+                    font-weight: 300;
                     cursor: pointer;
                     border: 1px solid;
                     border-radius: 4px;
-                    padding: 1rem 1.75rem;
+                    padding: 0.5rem 1.75rem;
                     width: 130px;
+                    position: relative;
+
+                    &:before { 
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        z-index: -1;
+                        background-color: #000;
+                        transform: scaleX(.3);
+                        opacity: 0;
+                        transition: all .3s
+                    }
+
+                    &:hover::before {
+                        opacity: 1;
+                        background-color: #132046;
+                        transform: scaleX(1);
+                        transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity
+                    }    
                 }
 
-
-            }
-            
+                
+            }           
         }
-
     }
 }
 
 @media (min-width: 610px) {
-    .about-showcase {
-        
-        .container{
-            
+    .about-showcase {        
+        .container{            
             .about-wrapper {
                margin-left: 20px;
                 margin-right: 20px; 
                 .about-content {
                     margin: 0 auto;
                     position: relative;
-                    .about-desc {
-                        
-                    }
                 }
             }
         }
     }
 }
 
-/* @media (min-width: 775px) {
-    .about-showcase {
-       
-        .about-wrapper {
-          
-            .about-content {
-                max-width: 1068px;
-            }
-        }
-    }
-} */
-
-
-
  @media (min-width: 905px) {
-    .about-showcase {
-        
+    .about-showcase {        
         .container {
          margin: 0;
-            .about-wrapper {                  
-
+            .about-wrapper {               
                 .about-content {
-
                     .about-title {
-
                         margin-left: 0;
                     }
                     
