--- a/src/css/sections/_footer.scss
+++ b/src/css/sections/_footer.scss
@@ -1,17 +1,38 @@
 .footer-wrapper {
-    height: 60px;
+    height: 120px;
     margin-top: 100px;
     text-align: center;
     background: #090e18;
     font-family: 'Source Sans Pro';
 
-    p {
-        color: rgb(129, 129, 129);
-        padding: 17px;
-        margin: 0;
+    @media (min-width: 775px) {
+        height: 50px;
+    }
+
+    .contact-icons {     
+        display: block;
+        padding-top: 20px;
+   
+        a{
+            font-size: 21px;
+            margin: 20px;
+            text-decoration: none;
+            color: rgb(129, 129, 129);
+        }
+
+        @media (min-width: 775px) {
+            display: none;
+        }
 
     }
+
+    p {
+        color: rgb(129, 129, 129);
+        margin: 0;
+        padding: 10px;
+    }
 }
+
 
 @media (min-width: 905px) {
     .footer-wrapper {
