--- a/src/css/sections/_footer.scss
+++ b/src/css/sections/_footer.scss
@@ -2,7 +2,6 @@
     height: 120px;
     margin-top: 100px;
     text-align: center;
-    background: #090e18;
     font-family: 'Source Sans Pro';
 
     @media (min-width: 775px) {
@@ -14,10 +13,11 @@
         padding-top: 20px;
    
         a{
-            font-size: 21px;
+            font-size: 28px;
             margin: 20px;
             text-decoration: none;
-            color: rgb(129, 129, 129);
+           /*  color: rgb(129, 129, 129); */
+             color: rgb(100, 255, 218); 
         }
 
         @media (min-width: 775px) {
