--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -108,6 +108,10 @@
                     text-align: right;
                     right: 0;
                     margin: 20px 30px;
+
+                    a {
+                        text-decoration: none;
+                    }
                 }
 
                 h4 {
@@ -238,6 +242,10 @@
                     right: 0;
                     margin: 20px 30px;
                     margin-right: 30px;
+                    
+                    a {
+                        text-decoration: none;
+                    }
                 }
 
                 h4 {
@@ -246,8 +254,10 @@
                     color: rgb(100, 255, 218);
                 }
 
-                h5 {
+                h5 {                    
                     font-size: 23px;
+
+                  
                 }
 
                 /* --- Project Description --- */
@@ -367,6 +377,10 @@
                     text-align: left;
                     left: 0;
                     margin: 20px 30px;
+
+                    a {
+                        text-decoration: none;
+                    }
                 }
 
                 h4 {
