--- a/src/css/header/_header.scss
+++ b/src/css/header/_header.scss
@@ -6,7 +6,8 @@ header {
     z-index: 10;
     font-family: 'Source Sans Pro';
     font-weight: lighter;
-
+    scroll-behavior: smooth;
+    
     .inner-header {
         display:  flex;
         align-items: center;
@@ -22,7 +23,6 @@ header {
                 color: $off-white;
             }
         }
-
         
 
         .navbar {
@@ -34,11 +34,10 @@ header {
             transition: transform 700ms 
                         cubic-bezier(0.77, 0, 0.175, 1),background-color 700ms ease,opacity 500ms ease;
 
-            .nav-list {               
+            .nav-list {              
 
                 ul {
                     display: flex;
-                    /* width: 100%; */
                     list-style: none;
                     margin-top: 30px;
 
@@ -52,15 +51,17 @@ header {
                         color: rgb(177, 187, 216);
                         width: 100%;
                         margin-right: 50px;
-                        font-size: 16px;   
-                                             
+                        font-size: 16px; 
+
+                        &:hover {
+                            color: rgb(100, 255, 218);
+                        }               
                     }
 
-                    a {
-                        text-decoration: none;
+                    a {                        
+                        text-decoration: none;   
                     }
                 }
-
                
             }
         }
