--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -5,7 +5,8 @@
     position: relative;
     height: auto;
     overflow:hidden;
-
+    scroll-behavior: smooth;
+    
     .container {
 
 
@@ -139,7 +140,7 @@
                     top: 0;
                     left: 0;
                     width: 100%;
-                    height: 50vh;
+                    height: 60vh;
                     object-fit: cover;
                     object-position: center center;   
                     
@@ -350,7 +351,7 @@
                     top: 0;
                     left: 0;
                     width: 100%;
-                    height: 50vh;
+                    height: 60vh;
                     object-fit: cover;
                     object-position: center center;
 
@@ -561,7 +562,7 @@
                     top: 0;
                     left: 0;
                     width: 100%;
-                    height: 50vh;
+                    height: 60vh;
                     object-fit: cover;
                     object-position: center center;
 
@@ -721,7 +722,8 @@
 
                 @media (min-width: 610px) {
                     cursor: pointer;
-                    background-color:  #0092b780;
+                    /* background-color:  #0092b780; */
+                     background-color:  #0092b731;
 
                     &:hover{
                         cursor: pointer;
