--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -18,9 +18,7 @@ $off-white: #f2f4f5;
 @import './sections/footer';
 
 /* Pages */
-@import './pages/capstone';
-@import './pages/portfolio';
-@import './pages/mtm';
+@import './pages/individual-works';
 
 /* Atoms */
 @import './atoms/cube';
