Removed particles due to high cpu usage

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -22,6 +22,7 @@ $off-white: #f2f4f5;
 
 /* Atoms */
 @import './atoms/cube';
+@import './atoms/particles';
 
 /* Mixins */
 @import './mixins/mixins-master';
