--- a/src/css/pages/_individual-works.scss
+++ b/src/css/pages/_individual-works.scss
@@ -76,6 +76,14 @@ main {
             a{        
             text-decoration: none;
             color: #e3e3e3;
+          
+                &:hover {
+                    color: #64ffdb;
+                    transform: translateY(-3px);
+                }            
+                
+
+            
             }
         }       
     }
@@ -287,15 +295,16 @@ main {
             letter-spacing: 7px;
             color: rgb(182, 182, 182);
             margin: 10px; 
-            margin-bottom: 20px;      
-            font-size: 21px;   
+            margin-bottom: 35px;      
+            font-size: 28px;   
         }
 
         .link-title {
-            font-size: 28px;
+            font-size: 32px;
             letter-spacing: 2px;  
             padding: 0;
             margin: 0 auto;
+            
             color: #e3e3e3;
             text-transform: uppercase;
             text-align: center;
@@ -308,7 +317,7 @@ main {
             }
 
             @media (min-width: 1080px) {
-                width: 250px;
+                width: 300px;
 
                 &:hover {
                     color:#e3e3e3;
