--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -3,7 +3,7 @@
     height: auto;
     font-family: 'Source Sans Pro';
     position: relative;
-    height: 1300px;
+    height: 900px;
     scroll-behavior: smooth;
 
     h1, h2, p {
@@ -122,7 +122,7 @@
                     cursor: pointer;
                     border: 1px solid;
                     border-radius: 4px;
-                    padding: 0.5rem 1.75rem;
+                    padding: 0.5rem 0.75rem;
                     width: 130px;
                     position: relative;
 
@@ -147,7 +147,7 @@
 
                     &:hover::before {
                         opacity: 1;
-                        background-color: #132046;
+                        background-color:#64ffdb15;
                         transform: scaleX(1);
                         transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity
                     }    
