--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -19,6 +19,7 @@ $off-white: #f2f4f5;
 
 /* Pages */
 @import './pages/individual-works';
+@import './pages/not-found';
 
 /* Atoms */
 @import './atoms/cube';
