fixed media queries and reorganized files

--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -3,7 +3,7 @@
     height: auto;
     font-family: 'Source Sans Pro';
     position: relative;
-    height: 900px;
+    min-height: 900px;
     scroll-behavior: smooth;
 
     h1, h2, p {
