--- a/src/css/header/_header.scss
+++ b/src/css/header/_header.scss
@@ -12,7 +12,7 @@ header {
         display:  flex;
         align-items: center;
         justify-content: space-between;
-        height: 80px;
+        min-height: 100px;
 
 
         .logo {
