--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -8,8 +8,26 @@
     scroll-behavior: smooth;
     
     .container {
+        margin: 0 auto;
+        height: 100%;
+        width: 100%;
+
+        @media(min-width: 775px) {
+            width: 700px; 
+       }
+
         @media (min-width: 905px) {
+            margin-left: 70px;
+            margin-right: 70px;
             width: 1150px;
+        }
+
+        
+        @media(min-width: 1280px) {
+            width: 1150px;
+            margin-left: 75px;
+            margin-right: 75px;
+            margin: 0 auto;
         }
     
     .section-01 {  
@@ -20,7 +38,6 @@
         margin-right: 40px;
         margin-left: 40px;
         padding-top: 50px;
-
 
         
         @media (min-width: 610px) {
@@ -141,6 +158,7 @@
                     height: 60vh;
                     object-fit: cover;
                     object-position: center center;   
+             
                     
                     @media (min-width: 905px) {
                         height: 400px;
@@ -239,16 +257,20 @@
                     bottom: 20px;
                     right: 0;
                     font-size: 14px;
+                    color: white;
                     border: 1px solid  rgb(173, 173, 173);
                     border-radius: 4px; 
                     padding: 9px 20px; 
                     cursor: pointer;
-                    text-decoration: none;
-                    color: white;                 
+                    text-decoration: none;                
                     margin-right: 30px;
 
                     @media (min-width: 610px) {
                         margin-right: 0;
+                    }
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
                     }
 
                     &:before { 
@@ -263,26 +285,21 @@
                         background-color: #000;
                         transform: scaleX(.3);
                         opacity: 0;
-                        transition: all .3s
+                        transition: all .3s;
+                        
                     }
 
                     &:hover::before {
                         opacity: 1;
                         background-color:#64ffdb31;
                         transform: scaleX(1);
-                        transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity
+                        transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity;
                     }    
-
-                    a {
-                        text-decoration: none;
-                        color: white;   
-                        line-height: 20px;                        
-                    }                    
                 }
 
             }
             .capstone-overlay {
-                 background-color: #022338a2;
+                background-color: rgba(2, 35, 56, 0.637);
                 height: 100%;
                 display: block;
                 position: absolute;
@@ -290,10 +307,9 @@
                 left: 0;
                 right: 0;
                 bottom: 0;    
-                border-radius: 5px;   
-                
+
                 @media (min-width: 610px) {
-                    background-color: #0092b780;
+                    background-color:  #0092b731;
 
                     &:hover{
                         cursor: pointer;
@@ -457,6 +473,10 @@
                      text-decoration: none;
                      color: white;
                      margin-right: 30px;
+
+                     &:hover {
+                        color: rgb(100, 255, 218);
+                    }
  
                      &:before { 
                          content: "";
@@ -497,11 +517,10 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
-                border-radius: 5px;  
-
+      
                 @media (min-width: 610px) {
                     cursor: pointer;
-                    background-color: #0092b780;
+                    background-color:  #0092b731;
 
                     &:hover {                        
                         opacity: 0;
@@ -553,7 +572,7 @@
                 }
 
                 @media (min-width: 905px) {
-                    width: 60%;
+                    width: 65%;
                 }
 
             .port-feature   {
@@ -659,7 +678,7 @@
                 }
 
 
-                /* ==== Project Technologies ==== */
+                /* ==== View Details Btn ==== */
                 .details-btn{
                     display: block;
                      position: absolute;
@@ -678,6 +697,10 @@
                      @media (min-width: 610px) {
                         margin-left: 0;
                     }
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
  
                      &:before { 
                          content: "";
@@ -691,14 +714,14 @@
                          background-color: #000;
                          transform: scaleX(.3);
                          opacity: 0;
-                         transition: all .3s
+                         transition: all .3s;
                      }
  
                      &:hover::before {
                          opacity: 1;
                          background-color:#64ffdb31;
                          transform: scaleX(1);
-                         transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity
+                         transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity;
                      }    
  
                      a {
@@ -718,7 +741,7 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
-                border-radius: 5px;  
+             
 
                 @media (min-width: 610px) {
                     cursor: pointer;
@@ -733,8 +756,8 @@
                     }
                 }
             }
+        }
     }
-}
 }
    
     /* ==== Side Social Media ==== */
@@ -746,7 +769,7 @@
         top: 60%;
         left: -3px;
         font-weight: 700;
-        font-size: 25px;
+        font-size: 26px;
         color: $off-white;
         letter-spacing: 1.5px;
         z-index: 8;
@@ -766,7 +789,8 @@
             }      
 
             li {
-                margin-bottom: 20px;
+                margin-bottom: 30px;
+
                 &:hover {
                     color: #64ffdb;
                     transform: translateY(-3px);
