--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -409,6 +409,7 @@
                     margin-top: 20px;
                     margin-bottom: 15px;
                     font-size: 13px;
+                    font-weight: 500;
                     color: rgb(100, 255, 218);
                 }
 
@@ -631,6 +632,7 @@
                     margin-top: 20px;
                     margin-bottom: 15px;
                     font-size: 13px;
+                    font-weight: 500;
                     color: rgb(100, 255, 218);
                 }
 
@@ -756,7 +758,230 @@
                     }
                 }
             }
-        }
+        }/* ==== End Portfolio Card ==== */
+        
+
+           /* ==== Movie App Card ===== */
+
+           .movieApp-container {
+            position: relative;
+            margin-top: 70px;
+            margin-bottom: 170px;
+
+            @media (min-width: 610px) {
+                margin-left: 0;    
+            }
+
+            .movieApp-thumbnail {
+                width: 100%;
+                margin: 0 auto;
+                mix-blend-mode: screen;
+                position: relative;
+                box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                
+                @media (min-width: 610px) {
+                    width: 60%;               
+                    margin-right: 0;     
+                    
+                    &:hover {
+                        transition-duration: 0.9s;
+                        transition: all 0.5s ease-in-out;
+                        transform: scale(1.02);
+                        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+                    }
+                }
+
+                @media (min-width: 775px) {
+                    width: 400px;
+                }
+
+                @media (min-width: 905px) {
+                    width: 65%;
+                }
+
+            .movieApp-feature   {
+                    border-radius: 5px;  
+                    position: inherit !important; 
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 60vh;
+                    object-fit: cover;
+                    object-position: center center;
+
+                    @media (min-width: 610px) {
+                        height: 55vh;
+                        cursor: pointer;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }       
+                    
+                    @media (min-width: 905px) {
+                        height: 400px;
+                    }
+    
+                }        
+
+            }
+
+
+        /* ==== Project Title ==== */ 
+            .movieApp-info {                    
+                .featured-title {
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    color: $off-white;
+                    text-align: left;
+                    left: 0;
+                    margin: 20px 30px;
+
+                    a {
+                        text-decoration: none;
+                    }
+
+                    @media (min-width: 610px) {
+                        margin-left: 0;
+                    }
+
+                    @media (min-width: 905px) {
+                        margin-left: 0;
+                    }
+                }
+
+                h4 {
+                    margin-top: 20px;
+                    margin-bottom: 15px;
+                    font-size: 13px;
+                    font-weight: 500;
+                    color: rgb(100, 255, 218);
+                }
+
+                h5 {
+                    font-size: 23px;
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
+                }
+
+
+                /* ==== Project Description ==== */
+                .movieApp-description {
+                    display: block;
+                    position: absolute;
+                    top: 80px;
+                    color: white;
+                    font-size: 16px;
+                    text-align: left;
+                    margin: 50px 30px;
+                    font-family: 'Source Sans Pro';
+                    font-weight: 300;
+
+                    @media (min-width: 610px)  {
+                        background-color: rgb(30, 44, 90);
+                        padding: 17px;
+                        margin-top: 50px;
+                        max-width: 50%;
+                        font-size: 16px;
+                        border-radius: 5px;
+                        margin-left: 0;
+                    }
+
+                    @media (min-width: 775px) {
+                        padding: 25px;
+                    }
+
+                    @media (min-width: 905px) {
+                        margin-left: 0;
+                        margin-top: 70px;
+                        padding: 22px;
+                        margin-right: 50%;      
+                    }
+                }
+
+
+                /* ==== View Details Btn ==== */
+                .details-btn{
+                    display: block;
+                     position: absolute;
+                     text-align: center;
+                     bottom: 20px;
+                     left: 0;
+                     font-size: 14px;
+                     border: 1px solid rgb(173, 173, 173); 
+                     border-radius: 4px; 
+                     padding: 9px 20px; 
+                     cursor: pointer;
+                     text-decoration: none;
+                     color: white;
+                     margin-left: 30px;
+
+                     @media (min-width: 610px) {
+                        margin-left: 0;
+                    }
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
+ 
+                     &:before { 
+                         content: "";
+                         position: absolute;
+                         top: 0;
+                         left: 0;
+                         display: block;
+                         width: 100%;
+                         height: 100%;
+                         z-index: -1;
+                         background-color: #000;
+                         transform: scaleX(.3);
+                         opacity: 0;
+                         transition: all .3s;
+                     }
+ 
+                     &:hover::before {
+                         opacity: 1;
+                         background-color:#64ffdb31;
+                         transform: scaleX(1);
+                         transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity;
+                     }    
+ 
+                     a {
+                         text-decoration: none;
+                         color: white;   
+                         line-height: 20px;                        
+                     }                    
+                 }
+
+            }
+            .movieApp-overlay {
+                background-color: rgba(2, 35, 56, 0.637);
+                height: 100%;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+             
+
+                @media (min-width: 610px) {
+                    cursor: pointer;
+                     background-color:  #0092b731;
+
+                    &:hover{
+                        cursor: pointer;
+                        opacity: 0;
+                        transition-duration: 0.5s;
+                        transition: all 0.2s ease-in-out;
+                        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+                    }
+                }
+            }
+        }/* ==== End Movie App Card ==== */
     }
 }
    
