--- a/src/css/header/_header.scss
+++ b/src/css/header/_header.scss
@@ -13,8 +13,9 @@ header {
         align-items: center;
         justify-content: space-between;
         min-height: 100px;
-
-
+        max-width: 1500px;
+        margin: 0 auto;
+        
         .logo {
             margin: 30px 0 0 10px;
             a {
