--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -3,9 +3,11 @@
     height: auto;
     font-family: 'Source Sans Pro';
     position: relative;
-    min-height: 900px;
+    min-height: 1000px;
     scroll-behavior: smooth;
-
+    @media (min-width: 905px)  {
+        min-height: 1300px;
+    }
     h1, h2, p {
         color: white;
     }
