--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -222,9 +222,12 @@
                     top: 80px;
                     color: white;
                     font-size: 16px;
-                    margin: 50px 30px;
+                    margin: 50px 30px; 
+                    padding: 0;
+                    width: auto;
                     font-family: 'Source Sans Pro';
                     font-weight: 300;
+                    background-color: transparent;
 
                     @media (min-width: 610px) {
                         background-color: rgb(30, 44, 90);
