--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -30,26 +30,12 @@
             margin: 0 auto;
         }
     
-    .section-01 {  
-        
+    .section-01 {        
         display: block;  
         margin: 0 auto;
-        margin-top: 90px; 
         margin-right: 40px;
         margin-left: 40px;
-        padding-top: 50px;
-
         
-        @media (min-width: 610px) {
-            margin-top: 90px; 
-            padding-top: 50px;
-        }
-
-        @media (min-width: 905px) {
-            margin-top: 90px; 
-            padding-top: 50px;
-        }
-
         .works-title {
             color: $off-white;
             font-weight: 600;
@@ -103,15 +89,11 @@
         margin-top: 60px;
 
 
-        @media (min-width: 905px) {
-            margin-top: 90px;
+        @media (min-width: 768px) {
+            margin-top: 60px;
             margin-right: 0;
             margin-left: 0;
             margin-bottom: 50px;
-        }
-
-        @media (min-width: 1080px) {
-            margin: 0 auto;
         }
 
 
@@ -119,8 +101,7 @@
 
         .project-container{
             position: relative;
-            margin-top: 100px;
-            margin-bottom: 150px;
+            margin: 50px 0;
             
 
             .project-thumbnail {
@@ -593,13 +574,12 @@
         .social-media:after {
             content: "";
             display: block;
-            position: absolute;
+            position: fixed;
             height: 280px;
             width: 1px;
             transform: rotate(-180deg);            
             background-color: rgb(187, 193, 206);
             right: 11px;
-            bottom: -285px;
         }           
     }
 
