--- a/src/css/pages/_individual-works.scss
+++ b/src/css/pages/_individual-works.scss
@@ -108,7 +108,7 @@ main {
             width: 80%; 
            
             @media (min-width: 775px) {
-                    width: 700px; 
+                width: 700px; 
             }
 
             @media (min-width: 1080px) {
@@ -123,7 +123,7 @@ main {
         }
 
         p {
-            margin-bottom: 80px;
+            margin-bottom: 50px;
             line-height: 1.8rem;
         }        
 
@@ -152,7 +152,7 @@ main {
 
         .role-section {
             margin-top: 50px;
-            padding-top: 50px;
+
 
             h2 {
                 text-transform: uppercase;
@@ -180,11 +180,19 @@ main {
                 }
             }
 
+            a{
+                color: #fff;
+                text-decoration-color: rgb(39, 148, 133);
+
+                &:hover {
+                    color: rgb(39, 148, 133);
+                }
+            }
+
 
         }
 
         .team {
-            margin-top: 60px;
             padding-top: 50px;
             h2 {
                 text-transform: uppercase;
@@ -219,22 +227,95 @@ main {
         }
     }
 
+    .project-description.custom {
+        margin-bottom: 0;
+    }
+
+
     .design-process {
         margin: 0 auto;
         width: 80%; 
         margin-bottom: 100px;
-       
-        .design-image {
-            padding: 50px;
-            background-color: #0e101bfc; 
-        }
+        margin-top: 50px;
 
-        @media (min-width: 775px) {
-            width: 700px; 
+        p {
+            color: #fff;
         }
 
         @media (min-width: 1080px) {
-            width: 905px; 
+            width: 905px;
+        }
+    
+        .design-container {
+
+       
+            .design-image {
+                padding: 50px;
+                background-color: #0e101bfc; 
+            }
+
+            @media (min-width: 775px) {
+                width: 700px; 
+            }
+
+            @media (min-width: 1080px) {
+                width: 905px; 
+            }
+        }
+
+        .design-container.custom {            
+
+            .design-image {
+                padding: 0;
+                background-color: unset; 
+
+                @media(min-width: 775px) {
+                    grid-row: 3;
+                }
+                
+            }
+            
+            .design-image.duo-device {
+                padding: 0;
+                margin-top: 10px;
+            }
+
+            .design-image.safari-screen-01 {
+                
+                @media(min-width: 775px) {
+                    grid-row: 1;
+                    grid-column:  1 / 4 span;
+                }
+            }
+            .design-image.safari-screen-02 {
+                
+                @media(min-width: 775px) {
+                    grid-row: 2;
+                    grid-column:  1 / 4 span;
+                }
+            }
+
+            .design-image.screen-03 {
+                
+                @media(min-width: 775px) {
+                    grid-column:  1 / 4 span;
+                }
+            }
+
+            .design-image.screen-05 {
+                @media(min-width: 775px) {
+                    grid-row: 4;
+                    grid-column:  1 / 3 span;
+                }
+            }
+
+            .design-image.screen-06 {
+                @media(min-width: 775px) {
+                    grid-row: 4;                
+                }
+            }
+            
+
         }
 
        h2 {          
@@ -361,9 +442,16 @@ main {
         }
 
     }
+
+    .showcase-section {
+
+    }
 }
 
 .tl-edges {
     overflow: hidden;
+    .design-image.dual-clay {
+        width: 1920px;
+    }
 }
 
